--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </section>
 
 
-    <!--produtos------------>
+    <!--t-sherts allskiin------------>
     <section class="product">
         <!--heading------------>
         <div class="p-heading">
@@ -208,6 +208,100 @@
 
         </div>
     </section>
+
+
+
+
+<!----Balaclavas-------->
+ <section class="product">
+        <!--heading------------>
+        <div class="p-heading">
+            <h3>Balaclavas
+                <font> all</font>skiin</h3>
+        </div>
+        <!--product-box-container------------>
+        <div class="product-container">
+            <div class="p-box">
+                <!--img--------->
+                <img src="Tsherts-allskiin-2022/t-shert1.png" alt="">
+                <ul class="icons">
+                    <a><i class="far fa-heart fa-xs"></i></a>
+                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
+                    <a href=""><i class="fas fa-search fa-xs"></i></a>
+                </ul>
+                <div class="ratting">
+                    <i class="bx bxs-star bxs-xs"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star-half"></i>
+                </div>
+                <!---details------>
+                <p>...</p>
+                <!--price----->
+                <a href="#" class="price">3.999,00 AOA</a>
+                <!--buy-btn------>
+                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+
+            <div class="p-box">
+
+                <!--img--------->
+
+                <img src="Tsherts-allskiin-2022/t-shert2.png" alt="">
+                <ul class="icons">
+                    <a><i class="far fa-heart fa-xs"></i></a>
+                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
+                    <a href=""><i class="fas fa-search fa-xs"></i></a>
+                </ul>
+                <div class="ratting">
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star-half"></i>
+                </div>
+                <!---details------>
+                <p>...</p>
+                <!--price----->
+                <a href="#" class="price">4.000,00 AOA</a>
+                <!--buy-btn------>
+                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+
+            <div class="p-box">
+                <!--img--------->
+                <img src="Tsherts-allskiin-2022/t-shert3.png" alt="">
+                <ul class="icons">
+                    <a><i class="far fa-heart fa-xs"></i></a></span>
+                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
+                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
+                </ul>
+                <div class="ratting">
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star-half"></i>
+                </div>
+                <!---details------>
+                <p>...</p>
+                <!--price----->
+                <a href="#" class="price">6.599,00 AOA</a>
+                <!--buy-btn------>
+                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+
+
+        </div>
+    </section>
+
+
+
+
+
+
+
 
     <!---our-brand------>
     <search class="our-brand">
