--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!----<link rel="shortcut icon" href="imagens/logo.png">---->
     <link rel="stylesheet" type="text/css" href="store-styles.css" />
     <!--using fontAwesome--------------->
+    
 
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
