--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="#" class="nav-link icon"><i class="bx bx-user"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://wa.me/message/BOZGIRQ5M4DYB1" class="nav-link icon"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.me/message/BOZGIRQ5M4DYB1" class="nav-link icon"><i class="bx bxl-whatsapp"></i></a>
                     </li>
                 </ul>
             </div>
