--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <!--price----->
                 <a href="#" class="price">3.999,00 AOA</a>
                 <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
+                <a href="pay/pay.html" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
             <div class="p-box">
