--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="details-tshert/details.html"><i class="fas fa-search fa-xs"></i></a>
+                    <a href="details_modelo1/details.html"><i class="fas fa-search fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star bxs-xs"></i>
