--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -17,7 +17,7 @@
         <div class="loader"></div>
         <nav class="nav bd-grid">
             <div class="nav__toggle" id="nav-toggle">
-                <img src="../imagens/menu.svg" width="15px" height="15px" />
+                <img src="../Imagens/menu.svg" width="15px" height="15px" />
             </div>
             <div>
                 <a href="https://allskiin.github.io/allskiin">
