--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -60,12 +60,12 @@
                 <div class="data">
                     <span class="data__subtitle">allskiin</span>
                     <h1 class="data__title">ken skiin</h1>
-                    <p class="data__description">A 'ken skiin' é o primeiro modelo de t-shert feito com técidos de ótima qualidade, 100% algodão <br>Cor: Branco / Preto Estilo: aliin-1s</p>
+                    <p class="data__description">A 'ken skiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Branco / Preto Estilo: aliin-1s</p>
                 </div>
 
                 <div class="actions">
                     <div class="size">
-                        <h3 class="size__title">Talkas</h3>
+                        <h3 class="size__title">Tamanhos</h3>
 
                         <div class="size__content">
                             <span class="size__tallas active">S</span>
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="cant">
-                        <h3 class="cant__title">Cant.</h3>
+                        <h3 class="cant__title">Quant.</h3>
 
                         <div class="cant__content">
                             <span>-</span>
