--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -27,7 +27,7 @@
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a class="nav__link" href="../../store.html">HOME</a></li>
+                    <li class="nav__item"><a class="nav__link" href="https://allskiin.github.io/allskiin">HOME</a></li>
                 </ul>
                
             </div>
