--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>allskiin • story</title>
 
-    <!----<link rel="shortcut icon" href="imagens/logo.png">---->
+    <link rel="shortcut icon" href="Imagens/Allskiin.ico">
     <link rel="stylesheet" type="text/css" href="store-styles.css" />
     <!--using fontAwesome--------------->
 
