--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -20,10 +20,7 @@
                 <img src="../Imagens/menu.svg" width="15px" height="15px" />
             </div>
             <div>
-                <a href="https://allskiin.github.io/allskiin">
-                    <font>all</font>
-                    <h1>skiin</h1>
-                </a>
+               <a href="" class="nav__logo"><img src="Imagens/logo-allskiin.svg" width="90px" height="90px" /></a>
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
