--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="details_modelo1/details.html"><i class="fas fa-search fa-xs"></i></a>
+                    <a href="details_modelo1/details.html"><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star bxs-xs"></i>
@@ -156,7 +156,6 @@
                 <!--price----->
                 <a href="#" class="price">11.499,00 AOA</a>
                 <!--buy-btn------>
-                <a href="pay/pay.html" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
             <div class="p-box">
@@ -167,7 +166,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-search fa-xs"></i></a>
+                    <a href=""><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star"></i>
@@ -181,7 +180,6 @@
                 <!--price----->
                 <a href="#" class="price">4.000,00 AOA</a>
                 <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
             <div class="p-box">
@@ -190,7 +188,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a></span>
                     <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
+                    <a href="#"><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star"></i>
@@ -204,7 +202,6 @@
                 <!--price----->
                 <a href="#" class="price">6.599,00 AOA</a>
                 <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
 
@@ -229,7 +226,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-search fa-xs"></i></a>
+                    <a href=""><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star bxs-xs"></i>
@@ -243,7 +240,6 @@
                 <!--price----->
                 <a href="#" class="price">3.999,00 AOA</a>
                 <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
             <div class="p-box">
@@ -254,7 +250,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-search fa-xs"></i></a>
+                    <a href=""><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star"></i>
@@ -268,7 +264,6 @@
                 <!--price----->
                 <a href="#" class="price">4.000,00 AOA</a>
                 <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
             <div class="p-box">
@@ -277,7 +272,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a></span>
                     <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
+                    <a href="#"><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star"></i>
@@ -291,7 +286,6 @@
                 <!--price----->
                 <a href="#" class="price">6.599,00 AOA</a>
                 <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
 
