--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -129,7 +129,7 @@
                                         <p>BAI</p>
                                     </div>
                                     <div class='card-form'>
-                                        <a href="https://https://wa.me/message/BOZGIRQ5M4DYB1"><button class='button-cta' title='Confirm your purchase'><span>Pagar</span></button></a>
+                                        <a href="https://wa.me/message/BOZGIRQ5M4DYB1"><button class='button-cta' title='Confirm your purchase'><span>Pagar</span></button></a>
 
                                     </div>
                                 </div>
