--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </div>
         <!--main-text------------>
         <div class="main-text">
-            <h1>Nov
-                <font>idades</font>
+            <h1>Brevi
+                <font>mente</font>
             </h1>
             <h2>20
                 <font>22</font>
