--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
         </div>
         <!--main-text------------>
         <div class="main-text">
-            <h1>Brevi
-                <font>mente</font>
+            <h1>
+                <font>Brevimente</font>
             </h1>
-            <h2>20
-                <font>22</font>
+            <h2>2022
             </h2>
             <!---btn----->
             <a href="#" class="main-btn">Detalhes</a>
