--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 
                 <!--img--------->
 
-                <img src="Tsherts-allskiin-2022/t-shert2.png" alt="">
+                <img src="Tsherts-allskiin-2022/allskiin_modelo1.png" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-cart fa-xs"></i></a>
+                    <a href="details_modelo_2/details.html"><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star"></i>
