--- a/details_modelo_2/details.html
+++ b/details_modelo_2/details.html
@@ -56,8 +56,8 @@
             <div class="info">
                 <div class="data">
                     <span class="data__subtitle">allskiin</span>
-                    <h1 class="data__title">ken skiin</h1>
-                    <p class="data__description">A 'ken skiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Branco / Preto Estilo: aliin-1s</p>
+                    <h1 class="data__title">Nightskiin</h1>
+                    <p class="data__description">A 'Nightskiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Preto / Azul escuro Estilo: aliin-1s</p>
                 </div>
 
                 <div class="actions">
@@ -67,7 +67,7 @@
                         <div class="size__content">
                             <span class="size__tallas active">S</span>
                             <span class="size__tallas active">M</span>
-                            <span class="size__tallas active">XL</span>
+  
                         </div>
                     </div>
 
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="preci">
-                    <a class="preci__value">11.499,00 Kz
+                    <a class="preci__value">14.499,00 Kz
                     </a>
 
 
@@ -102,13 +102,13 @@
                                         <li>
                                             <img src="../Tsherts-allskiin-2022/allskiin_modelo1.png" alt="">
                                             <h4>Ken Skiin</h4>
-                                            <h5>11.499,00 Kz</h5>
+                                            <h5>14.499,00 Kz</h5>
                                         </li>
                                     </ul>
                                     <h5>Desconto</h5>
                                     <h4>499,00 Kz</h4>
                                     <h5 class="total">Total</h5>
-                                    <h1>11.000,00 Kz</h1>
+                                    <h1>14.000,00 Kz</h1>
                                 </div>
                                 <h2>Processos</h2>
                                 <div class="payment" id="payment">
