--- a/details_modelo_2/details.html
+++ b/details_modelo_2/details.html
@@ -101,7 +101,7 @@
                                     <ul class="order-list">
                                         <li>
                                             <img src="../Tsherts-allskiin-2022/allskiin_modelo1.png" alt="">
-                                            <h4>Ken Skiin</h4>
+                                            <h4>Nightskiin</h4>
                                             <h5>14.499,00 Kz</h5>
                                         </li>
                                     </ul>
