--- a/details_modelo_2/details.html
+++ b/details_modelo_2/details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ken skiin • allskiin</title>
+    <title>Nightskiin • allskiin</title>
     <link rel="stylesheet" href="details.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
 </head>
