--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ken skiin • allskiin</title>
+    <title>Nightskiin • allskiin</title>
     <link rel="stylesheet" href="details.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
 </head>
@@ -20,7 +20,7 @@
                 <img src="../Imagens/menu.svg" width="15px" height="15px" />
             </div>
             <div>
-                <a href="" class="nav__logo"><img src="../Imagens/logo-allskiin.svg" width="90px" height="90px" /></a>
+                <a href="https://allskiin.github.io/allskiin/" class="nav__logo"><img src="../Imagens/logo-allskiin.svg" width="90px" height="90px" /></a>
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -56,8 +56,8 @@
             <div class="info">
                 <div class="data">
                     <span class="data__subtitle">allskiin</span>
-                    <h1 class="data__title">ken skiin</h1>
-                    <p class="data__description">A 'ken skiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Branco / Preto Estilo: aliin-1s</p>
+                    <h1 class="data__title">Nightskiin</h1>
+                    <p class="data__description">A 'Nightskiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Rosa / Azul escuro Estilo: aliin-2s</p>
                 </div>
 
                 <div class="actions">
@@ -67,7 +67,7 @@
                         <div class="size__content">
                             <span class="size__tallas active">S</span>
                             <span class="size__tallas active">M</span>
-                            <span class="size__tallas active">XL</span>
+                    
                         </div>
                     </div>
 
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="preci">
-                    <a class="preci__value">11.499,00 Kz
+                    <a class="preci__value">14.499,00 Kz
                     </a>
 
 
@@ -97,18 +97,18 @@
                             <div class="checkout">
                                 <div class="order">
                                     <h2>Confira</h2>
-                                    <h5>Order #001</h5>
+                                    <h5>Order #002</h5>
                                     <ul class="order-list">
                                         <li>
                                             <img src="../Tsherts-allskiin-2022/allskiin_modelo1.png" alt="">
-                                            <h4>Ken Skiin</h4>
-                                            <h5>11.499,00 Kz</h5>
+                                            <h4>Nightskiin</h4>
+                                            <h5>14.499,00 Kz</h5>
                                         </li>
                                     </ul>
                                     <h5>Desconto</h5>
                                     <h4>499,00 Kz</h4>
                                     <h5 class="total">Total</h5>
-                                    <h1>11.000,00 Kz</h1>
+                                    <h1>14.000,00 Kz</h1>
                                 </div>
                                 <h2>Processos</h2>
                                 <div class="payment" id="payment">
