--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <i class="bx bxs-star-half"></i>
                 </div>
                 <!---details------>
-                <p>...</p>
+                <p>Nightskiin</p>
                 <!--price----->
                 <a href="#" class="price">14.499,00 AOA</a>
                 <!--buy-btn------>
@@ -175,7 +175,7 @@
                     <i class="bx bxs-star-half"></i>
                 </div>
                 <!---details------>
-                <p>...</p>
+                <p>Nightskiin</p>
                 <!--price----->
                 <a href="#" class="price">14.499,00 AOA</a>
                 <!--buy-btn------>
