--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="product-container">
             <div class="p-box">
                 <!--img--------->
-                <img src="Tsherts-allskiin-2022/Nightskiin_preto.png" alt="">
+                <img src="Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
@@ -161,7 +161,7 @@
 
                 <!--img--------->
 
-                <img src="Tsherts-allskiin-2022/Nightskiin_rosa.png" alt="">
+                <img src="Tsherts-allskiin-2022/Nightskiin_rosa.PNG" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
