--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -43,7 +43,7 @@
                 <div class="sneaker__figure"></div>
 
                 <div>
-                    <img src="../Tsherts-allskiin-2022/allskiin_modelo1.png" alt="" class="sneaker__img shows" color="#A29596" />
+                    <img src="../Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt="" class="sneaker__img shows" color="#A29596" />
                 </div>
 
                 <div class="sneaker__colors">
