--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -57,7 +57,7 @@
                 <div class="data">
                     <span class="data__subtitle">allskiin</span>
                     <h1 class="data__title">Nightskiin</h1>
-                    <p class="data__description">A 'Nightskiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Rosa / Azul escuro Estilo: aliin-2s</p>
+                    <p class="data__description">A 'Nightskiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Preto / Azul escuro Estilo: aliin-2s</p>
                 </div>
 
                 <div class="actions">
