--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
     </section>
 
 
-    <!--t-sherts allskiin------------>
+    <!--t-sherts nightskiin------------>
     <section class="product">
         <!--heading------------>
         <div class="p-heading">
-            <h3>T-shirts
-                <font> all</font>skiin</h3>
+            <h3>Nig
+                <font>ht</font>skiin</h3>
         </div>
         <!--product-box-container------------>
         <div class="product-container">
@@ -181,28 +181,6 @@
                 <!--buy-btn------>
             </div>
 
-            <div class="p-box">
-                <!--img--------->
-                <img src="Tsherts-allskiin-2022/t-shert3.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a></span>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-cart fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">6.599,00 AOA</a>
-                <!--buy-btn------>
-            </div>
-
 
         </div>
     </section>
@@ -210,12 +188,12 @@
 
 
 
-    <!----Balaclavas-------->
+    <!----woman-------->
     <section class="product">
         <!--heading------------>
         <div class="p-heading">
-            <h3>Balaclavas
-                <font> all</font>skiin</h3>
+            <h3>Wo
+                <font>man</font>'s</h3>
         </div>
         <!--product-box-container------------>
         <div class="product-container">
@@ -237,56 +215,9 @@
                 <!---details------>
                 <p>...</p>
                 <!--price----->
-                <a href="#" class="price">3.999,00 AOA</a>
+                <a href="#" class="price">... AOA</a>
                 <!--buy-btn------>
             </div>
-
-            <div class="p-box">
-
-                <!--img--------->
-
-                <img src="Tsherts-allskiin-2022/t-shert2.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-cart fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">4.000,00 AOA</a>
-                <!--buy-btn------>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="Tsherts-allskiin-2022/t-shert3.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a></span>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-cart fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">6.599,00 AOA</a>
-                <!--buy-btn------>
-            </div>
-
 
         </div>
     </section>
