--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <section class="product">
         <!--heading------------>
         <div class="p-heading">
-            <h3>Nig
-                <font>ht</font>skiin</h3>
+            <h3>
+                Nig<font>ht</font>skiin</h3>
         </div>
         <!--product-box-container------------>
         <div class="product-container">
