--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
     <section class="product">
         <!--heading------------>
         <div class="p-heading">
-            <h3>Wo
-                <font>man</font>'s</h3>
+            <h3>
+                Wo<font>man</font>'s</h3>
         </div>
         <!--product-box-container------------>
         <div class="product-container">
