--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!--heading------------>
         <div class="p-heading">
             <h3>
-                Nig<font>ht</font>skiin</h3>
+                Nig<font>hts</font>kiin</h3>
         </div>
         <!--product-box-container------------>
         <div class="product-container">
