--- a/details_modelo1/details.html
+++ b/details_modelo1/details.html
@@ -100,7 +100,7 @@
                                     <h5>Order #002</h5>
                                     <ul class="order-list">
                                         <li>
-                                            <img src="../Tsherts-allskiin-2022/allskiin_modelo1.png" alt="">
+                                            <img src="../Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt="">
                                             <h4>Nightskiin</h4>
                                             <h5>14.499,00 Kz</h5>
                                         </li>
