--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
         <div class="product-container">
             <div class="p-box">
                 <!--img--------->
-                <img src="Tsherts-allskiin-2022/t-shert1.png" alt="">
+                <img src="Tsherts-allskiin-2022/Woman_1.PNG" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-cart fa-xs"></i></a>
+                    <a href="details_modelo3/details.html"><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star bxs-xs"></i>
